<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.AddContact">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="316dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:hint="@string/hint_nome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <EditText
            android:id="@+id/lastNameText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_sobrenome"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/nameText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameText"
            app:layout_constraintTop_toBottomOf="@+id/nameText"
            android:autofillHints="" />

        <EditText
            android:id="@+id/phoneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_telefone"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="@+id/lastNameText"
            app:layout_constraintStart_toStartOf="@+id/lastNameText"
            app:layout_constraintTop_toBottomOf="@+id/lastNameText"
            android:autofillHints="" />

        <Spinner
            android:id="@+id/phoneTypeSpinner"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="@+id/phoneText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phoneText"
            app:layout_constraintTop_toBottomOf="@+id/phoneText"/>

        <EditText
            android:id="@+id/emailText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/phoneTypeSpinner"
            app:layout_constraintStart_toStartOf="@+id/phoneTypeSpinner"
            app:layout_constraintTop_toBottomOf="@+id/phoneTypeSpinner" />

        <EditText
            android:id="@+id/instagramText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_instagram"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/emailText"
            app:layout_constraintStart_toStartOf="@+id/emailText"
            app:layout_constraintTop_toBottomOf="@+id/emailText" />

        <EditText
            android:id="@+id/linkedinText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/hint_linkedin"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/instagramText"
            app:layout_constraintStart_toStartOf="@+id/instagramText"
            app:layout_constraintTop_toBottomOf="@+id/instagramText" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/text_botao_salvar"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/linkedinText"
            app:layout_constraintTop_toBottomOf="@+id/linkedinText" />



    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>